samples/_failures_safe/1761334621_989b96_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_45921267.c: In function ‘main’:
./samples/SAFE/__tmp_45921267.c:183:17: error: expected expression at end of input
  183 |                 if (read_line(input, sizeof(input)) != 0)
      |                 ^~
./samples/SAFE/__tmp_45921267.c:183:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_45921267.c:183:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_45921267.c:183:17: error: expected declaration or statement at end of input
